feat: allow post authors to edit caption and image
